--- a/package.json
+++ b/package.json
@@ -2,17 +2,31 @@
   "name": "raid-split-tool",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/main.js",
+  "main": "dist/main/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && electron ."
+    "dev": "vite --config ./config/vite.config.ts",
+    "build": "vite build",
+    "start": "tsc && cross-env NODE_ENV=development electron .",
+    "start:dev": "concurrently \"npm run dev\" \"npm run start\""
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/electron": "^1.6.12",
     "@types/node": "^22.8.7",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.3",
+    "cross-env": "^7.0.3",
     "electron": "^33.0.2",
-    "typescript": "^5.6.3"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3",
+    "concurrently": "^9.1.0"
+  },
+  "dependencies": {
+    "vite": "^5.4.10"
   }
 }
